--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
                     <div class="col-xl-7 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                <h2 class="display-3 font-weight-bold">
+                                <h2 class="display-3 font-weight-bold font-25">
                                     Trinity Balaji Seller Training
                                 </h2>
                             </div>
@@ -109,7 +109,7 @@
                     <div class="col-xl-7 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                <h2 class="display-4 font-weight-bold text-center mb-30">
+                                <h2 class="display-4 font-weight-bold text-center mb-30 font-25">
                                     Get Training For Trinity Balaji Portal From
                                     Trinity Balaji Portal Experts
                                 </h2>
@@ -135,7 +135,7 @@
                     <div class="col-xl-6 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                <h2 class="display-4 font-weight-bold mb-30">
+                                <h2 class="display-4 font-weight-bold mb-30 font-25">
                                     What is Government
                                     e-Marketplace?
                                 </h2>
@@ -176,7 +176,7 @@
 
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-9 align-self-center">
-                        <h2 class="display-4 font-weight-bold text-center mb-30">
+                        <h2 class="display-4 font-weight-bold text-center mb-30 font-25">
                             Trinity Seller Training With Trinity Experts
                         </h2>
 
@@ -189,7 +189,7 @@
 
         <section class="about-low-area section-padding40">
             <div class="container">
-                <h2 class="text-center display-4 font-weight-bold mb-30">Why Learn About Government e-Marketplace?</h2>
+                <h2 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h2>
                 <div class="row justify-content-between">
 
                     <div class="col-xl-6 col-lg-6 col-md-10">
@@ -234,11 +234,11 @@
 
         <section class="about-low-area section-padding40">
             <div class="container">
-                <h2 class="text-center display-4 font-weight-bold mb-30">Why Learn About Government e-Marketplace?</h2>
+                <h2 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h2>
                 <div class="row">
 
                     <div class="col-xl-4 col-lg-4 col-md-9">
-                        <h1 class="text-center font-weight-bold">Manufacturers (OEM)</h1>
+                        <h1 class="text-center font-weight-bold font-22">Manufacturers (OEM)</h1>
                         <div class="about-right-cap">
                             <div class="about-right-img pt-10">
                                 <img src="assets/img/trinity/Pic25.png" alt="">
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-9">
-                        <h1 class="text-center font-weight-bold">Traders (Resellers)</h1>
+                        <h1 class="text-center font-weight-bold font-22">Traders (Resellers)</h1>
                         <div class="about-right-cap">
                             <div class="about-right-img pt-35">
                                 <img src="assets/img/trinity/Pic26.png" alt="" style="width: 80%; height: auto;">
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-9 nopadding">
                         <div class="about-right-cap">
-                            <h1 class="text-center font-weight-bold">Service Providers</h1>
+                            <h1 class="text-center font-weight-bold font-22">Service Providers</h1>
 
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic27.png" alt="">
@@ -276,7 +276,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-6 col-lg-7 col-md-9 align-self-center">
-                        <h2 class="display-3 font-weight-bold text-center mb-30">
+                        <h2 class="display-3 font-weight-bold text-center mb-30 font-35">
                             Get Complete Training For Trinity Sellers
                         </h2>
 
@@ -330,7 +330,7 @@
                                                     <p class="card-text">Book your session timing with us.
                                                     </p>
                                                 </div>
-                                                <div class="col-md-2"> <span
+                                                <div class="col-md-2  center-sm"> <span
                                                         class="display-1 font-weight-bold orangetextcolor">1</span>
                                                 </div>
                                             </div>
@@ -350,7 +350,7 @@
                                                     <p class="card-text">Start taking your sessions with us.
                                                     </p>
                                                 </div>
-                                                <div class="col-md-2"> <span
+                                                <div class="col-md-2 center-sm"> <span
                                                         class="display-1 font-weight-bold orangetextcolor">2</span>
                                                 </div>
                                             </div>
@@ -367,7 +367,7 @@
                                                     <p class="card-text">Start handling your gem account as pro.
                                                     </p>
                                                 </div>
-                                                <div class="col-md-2"> <span
+                                                <div class="col-md-2 center-sm"> <span
                                                         class="display-1 font-weight-bold orangetextcolor">3</span>
                                                 </div>
                                             </div>
@@ -413,7 +413,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center pl-100 pr-100 mb-30">
-                    <div class="col-md-6">
+                    <div class="col-md-6 ">
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title display-6  vertical-text-center"><i
@@ -478,7 +478,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 
-                        <h2 class="display-4 font-weight-bold">Live GeM Seller Training Sessions
+                        <h2 class="display-4 font-weight-bold font-25">Live GeM Seller Training Sessions
                         </h2>
 
                         <p>
@@ -626,7 +626,7 @@
             <div class="container">
                 <div class="row justify-content-center mb-5">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <h1 class="text-center display-4 font-weight-bold">
+                        <h1 class="text-center display-4 font-weight-bold font-30">
                             Always Remember These Points
                         </h1>
                     </div>
@@ -635,7 +635,7 @@
                     <div class="col-md-4">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h1 class="card-title font-weight-bold">Make It Straight & Clear</h1>
+                                <h1 class="card-title font-weight-bold font-22">Make It Straight & Clear</h1>
                                 <p>We keep everything straight and clear with our clients.</p>
                             </div>
                         </div>
@@ -643,7 +643,7 @@
                     <div class="col-md-4">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h1 class="card-title font-weight-bold">
+                                <h1 class="card-title font-weight-bold font-22">
                                     Keep The Quality
                                 </h1>
                                 <p>
@@ -655,7 +655,7 @@
                     <div class="col-md-4">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h1 class="card-title font-weight-bold">
+                                <h1 class="card-title font-weight-bold font-22">
                                     Get Your Results
                                 </h1>
                                 <p>
@@ -676,22 +676,22 @@
 
         <section>
             <div class="container">
-                <h1 class="text-center font-weight-bold display-3 pt-5">What We Have Done Till Now!
+                <h1 class="text-center font-weight-bold display-3 pt-5 font-35">What We Have Done Till Now!
                 </h1>
                 <div class="row">
                     <div class="col-md-3 text-center ">
-                        <div class="card border-0">
+                        <div class="card">
                             <div class="card-body">
-                                <h1 class="display-1  orangetextcolor font-weight-bold">3k</h1>
+                                <h1 class="display-1  orangetextcolor font-weight-bold font-40">3k</h1>
                                 <p class=" orangetextcolor">SESSIONS</p>
                             </div>
 
                         </div>
                     </div>
                     <div class="col-md-3 text-center ">
-                        <div class="card border-0">
+                        <div class="card">
                             <div class="card-body">
-                                <h1 class=" orangetextcolor display-1 font-weight-bold">500+</h1>
+                                <h1 class=" orangetextcolor display-1 font-weight-bold font-40">500+</h1>
                                 <p class=" orangetextcolor">HAPPY CLIENTS</p>
                             </div>
 
@@ -699,9 +699,9 @@
                     </div>
 
                     <div class="col-md-3 text-center ">
-                        <div class="card border-0">
+                        <div class="card ">
                             <div class="card-body">
-                                <h1 class=" orangetextcolor display-1 font-weight-bold">2k</h1>
+                                <h1 class=" orangetextcolor display-1 font-weight-bold font-40">2k</h1>
                                 <p class=" orangetextcolor">BIDS PLACED</p>
                             </div>
 
@@ -709,9 +709,9 @@
                     </div>
 
                     <div class="col-md-3 text-center ">
-                        <div class="card border-0">
+                        <div class="card">
                             <div class="card-body">
-                                <h1 class=" orangetextcolor display-1 font-weight-bold">34k</h1>
+                                <h1 class=" orangetextcolor display-1 font-weight-bold font-40">34k</h1>
                                 <p class=" orangetextcolor">PRODUCTS UPLOADED</p>
                             </div>
 
@@ -730,14 +730,14 @@
                 <div class="row ">
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
-                            <div class="about-right-img">
+                            <div class="about-right-img center-sm">
                                 <img src="assets/img/trinity/Pic34.png" alt="" style="width: 80%; height: auto;">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
 
-                        <h1 class="font-weight-bold text-center display-1">
+                        <h1 class="font-weight-bold text-center display-1 font-40">
                             Meet<br /> Our Team
                         </h1>
 
@@ -835,7 +835,7 @@
                 <div class="row ">
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 
-                        <h1 class="font-weight-bold display-1 mb-3">
+                        <h1 class="font-weight-bold display-1 mb-3 font-40">
                             Let's Connect
                         </h1>
 
@@ -870,7 +870,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <h1 class="text-center font-weight-bold display-4">
+                        <h1 class="text-center font-weight-bold display-4 font-25">
                             We have an amazing services.
                             <br />
                             Give it a try today!
@@ -888,7 +888,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center pl-100 pr-100">
-                    <div class="col-md-6 text-center">
+                    <div class="col-md-6 text-center pb-3">
                         <button type="button" class="orange-btn">CALL NOW</button>
                     </div>
                     <div class="col-md-6 text-center">
@@ -911,8 +911,8 @@
                         </div>
 
                     </div>
-                    <div class="col-xl-6 col-lg-7 col-md-9">
-                        <h2 class="display-4 font-weight-bold text-center mb-30">
+                    <div class="col-xl-6 col-lg-7 col-md-9  center-item-sm ">
+                        <h2 class="display-4 font-weight-bold text-center mb-30 font-30">
                             More Contacts
                         </h2>
                         <div class="row">
